tests/ui/imports/issue-37887.stderr
error[E0432]: unresolved import `test`
  --> $DIR/issue-37887.rs:3:9
   |
LL |     use test::*;
   |         ^^^^ use of unresolved module or unlinked crate `test`
   |
help: you might be missing a crate named `test`, add it to your project and import it in your code
   |
LL + extern crate test;
   |

error[E0658]: use of unstable library feature `test`
  --> $DIR/issue-37887.rs:2:5
   |
LL |     extern crate test;
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #50297 <https://github.com/rust-lang/rust/issues/50297> for more information
   = help: add `#![feature(test)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0658.
For more information about an error, try `rustc --explain E0432`.
