tests/ui/imports/issue-37887.rs
fn main() {
    extern crate test; //~ ERROR use of unstable
    use test::*; //~ ERROR unresolved import
}
